some more changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <ul class = "myfirstclass">
             <li class="firstlist"><div class="logo-image"><img src="img/800_3684860_z51lai6usq1oxp73i9vzu21a2vrk3jv5keo3p7vo_gm-monogram-logo-design.jpg" width="100px" height="48px"></div></li>
             <li class="firstlist"><a class="active" href="#home">Home</a></li>
-            <li class="firstlist"><a href="#news">HTML</a></li>   
-            <li class="firstlist"><a href="#contact">CSS</a></li>
-            <li class="firstlist"><a href="#about">JAVASCRIPT</a></li>
+            <li class="firstlist"><a href="detailedHTML.html">HTML</a></li>   
+            <li class="firstlist"><a href="detailedCSS.html">CSS</a></li>
+            <li class="firstlist"><a href="detailedJAVASCRIPT.html">JAVASCRIPT</a></li>
         </ul>
         <div class="w3-container">
             <div class = "introsec">
@@ -59,7 +59,7 @@
                         <li>Client side code runs on the user’s computer, code is downloaded and run by the browser.</li>
                         <li>Server side code runs on the server, then its results are downloaded and displayed in the browser.</li>
                     </ul>
-                    <a class = "toaddjs mytexttype" href="detailedHTML.html">Click here for more about JAVASCRIPT in detail.</a>
+                    <a class = "toaddjs mytexttype" href="detailedJAVASCRIPT.html">Click here for more about JAVASCRIPT in detail.</a>
                 </p>
             </div>
         </div>
