--- a/detailedCSS.html
+++ b/detailedCSS.html
@@ -8,7 +8,7 @@
         <div class="w3-container">
             <ul class = "myfirstclass">
                 <li class="firstlist"><div class="logo-image"><img src="img/800_3684860_z51lai6usq1oxp73i9vzu21a2vrk3jv5keo3p7vo_gm-monogram-logo-design.jpg" width="100px" height="48px"></div></li>
-                <li class="firstlist"><a href="#CSSS">Introduction to HTML</a></li>
+                <li class="firstlist"><a href="#CSSS">Introduction to CSS</a></li>
                 <li class="firstlist"><a href="#prop">Properties of CSS</a></li>
                 <li class="firstlist"><a href="#app">Application of CSS</a></li>
             </ul>
