--- a/detailedJAVASCRIPT.html
+++ b/detailedJAVASCRIPT.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title> Detailed HTML</title>
+        <title> Detailed JAVASCRIPT</title>
         <link rel="stylesheet" href="css/jsstyle.css">
     </head>
     <body class="back" background="img\photo-1519750783826-e2420f4d687f.jpg">
